feat: schedule habits by day of week; streak respects the schedule
A habit can now carry a weekly schedule (which days it is due). complete()
is rejected on a non-scheduled day, and the streak continues across
off-days by comparing against the previous scheduled date instead of
literal "yesterday". The same schedule-aware boundary is applied on the
read models (effectiveCurrentStreak, stats projection).

Schedule is exposed via the API: optional on create (defaults to all 7
days), patch-style on update (omitted = unchanged), always present in the
response. An empty schedule is rejected with 400.

Stored as a single comma-separated column via an AttributeConverter;
V11 backfills existing rows to all 7 days so daily behaviour is unchanged.

Known limitation: uncomplete() still maintains currentStreak
arithmetically; reconstructing it from history is a separate task.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>